applications/nodejs-example/kustomize/overlays/local/nodejs-example.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: nodejs-example
  name: nodejs-example
spec:
  replicas: 1
  template:
    spec:
      containers:
      - image: nodejs-example:local
        name: nodejs-example
        ports:
        - containerPort: 3000
        imagePullPolicy: Never
