applications/nodejs-example/kustomize/overlays/local/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nodejs-example
spec:
  rules:
  - host: nodejs-example.k8s.local
    http:
      paths:
      - path: /
        backend:
          serviceName: nodejs-example
          servicePort: 3000
